Fix a bug with the private credentials that are null Version of Jackrabbit from 2.16.2 to 2.16.3: